kubernetes/apps/ccinvoice/ns.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: ccinvoice
  annotations:
    volsync.backube/privileged-movers: "true" # required for setting file permissions during a backup restore
